[gd_scene load_steps=9 format=3 uid="uid://d0y487jhnugs7"]

[ext_resource type="Script" path="res://HUD/hud.gd" id="1_1j5c7"]
[ext_resource type="FontFile" uid="uid://p8g0sp7rxolq" path="res://assets/flappy-font.ttf" id="1_dpvm1"]
[ext_resource type="Texture2D" uid="uid://yrp1maykpere" path="res://HUD/game-over.png" id="3_efhec"]
[ext_resource type="Texture2D" uid="uid://n3440yxg4ysf" path="res://HUD/score-sheet.png" id="4_nscnu"]
[ext_resource type="AudioStream" uid="uid://brwkv81mvpslo" path="res://assets/sounds/woosh.wav" id="5_htev3"]
[ext_resource type="Texture2D" uid="uid://kublfr40hquf" path="res://HUD/okbutton.png" id="6_1gknp"]
[ext_resource type="Texture2D" uid="uid://cjfd6p5uqrhjl" path="res://HUD/sharebutton.png" id="7_3iw2s"]
[ext_resource type="Script" path="res://HUD/button.gd" id="7_erm88"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_1j5c7")

[node name="GameOver" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.5
offset_top = 117.335
offset_right = 125.5
offset_bottom = 189.335
grow_horizontal = 2
texture = ExtResource("3_efhec")
stretch_mode = 4

[node name="ScoreSheet" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="TextureRect" parent="ScoreSheet"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 23.5
offset_top = 230.0
offset_right = 296.5
offset_bottom = 370.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_nscnu")

[node name="ScoreLabel" type="Label" parent="ScoreSheet"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 141.0
offset_top = 291.0
offset_right = 381.93
offset_bottom = 393.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_dpvm1")
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1

[node name="BestScoreLabel" type="Label" parent="ScoreSheet"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 141.0
offset_top = 342.59
offset_right = 381.93
offset_bottom = 444.59
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_dpvm1")
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1

[node name="OKButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 71.0
offset_top = 426.0
offset_right = 158.0
offset_bottom = 457.0
texture_normal = ExtResource("6_1gknp")
stretch_mode = 5
script = ExtResource("7_erm88")

[node name="ShareButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 200.015
offset_top = 426.175
offset_right = 287.015
offset_bottom = 457.175
texture_normal = ExtResource("7_3iw2s")
stretch_mode = 5
script = ExtResource("7_erm88")

[node name="ScoreLabel" type="Label" parent="."]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -123.0
offset_top = 20.5
offset_right = 123.0
offset_bottom = 122.5
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_dpvm1")
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="MenuSelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_htev3")

[connection signal="pressed" from="OKButton" to="OKButton" method="_on_pressed"]
[connection signal="pressed" from="ShareButton" to="ShareButton" method="_on_pressed"]
